# teleimager

./: README.md  README_zh-CN.md  cam_config_server.yaml  lidar_bridge.cpp  pyproject.toml  setup_autostart.sh
src/teleimager/: cam_config_server.yaml  image_client.py  image_server.py
